# buildroot-with-defconfig

./: .gitignore  Makefile  README.md  README.txt  archivate.sh  build-apps.sh  buildroot  buildroot_config  checksum.txt  cp-artifacts.sh  kernel_config  launch-tema2.sh  url.txt
.github/workflows/: arhives.yaml
apps-rpi3/gpio-control/: Cargo.toml
apps-rpi3/gpio-control/src/: main.rs
apps-rpi3/web-ui/src/: main.rs
apps-rpi3/web-ui/static/: index.html  script.js
apps/localhost-dev/web-ui-nodejs/: README.md  script.js  server.js
apps/localhost-dev/web-ui-rs/: Cargo.toml  main.rs
apps/localhost-dev/web-ui-rs/static/: style.css
apps/localhost-dev/webserver-led-control/: Cargo.toml  README.md
apps/localhost-dev/webserver-led-control/src/: main.rs
apps/rpi3-dev/gpio-control/: README.md
apps/rpi3-dev/gpio-control/api/: postman-GPIO-control.json  restfox-GPIO-control.json
apps/rpi3-dev/web-ui/: Cargo.toml  README.md
apps/rpi3-dev/web-ui/static/: style.css
overlay-tema2025/etc/init.d/: S51ntpd  S99tema2
overlay-tema2025/etc/ssh/: sshd_config
