[package]
name = "web-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream"] }  # Pentru reverse proxy
rust-embed = "8.0"
mime_guess = "2.0"

[profile.release]
opt-level = "z"     # Optimizeaza pentru dimensiune
lto = true          # Link Time Optimization
codegen-units = 1   # Generare cod mai lenta, dar binar mai mic
panic = "abort"     # Elimina infrastructura de unwind
strip = true        # Elimina simbolurile de debug din binar
